--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,29 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
+    "ruff>=0.11.0",
 ]
+
+[tool.ruff]
+target-version = "py312"
+line-length = 120
+show-fixes = true
+preview = true
+
+[tool.ruff.lint]
+extend-select = ["ALL"]
+ignore = [
+    "D100",
+    "D104",
+    "CPY",
+]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["S101", "D101", "D103", "D102", "PLR6301", "PLR2004"]
+
+[tool.ruff.format]
+preview = true
+docstring-code-format = true
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
